--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "keywords": [
     "constant",
-    "first name"
+    "first-name"
   ],
   "author": "Mylloon",
   "license": "GPL-3.0-only"
