--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,12 +5,31 @@
         "es2021": true
     },
     "extends": [
-        "standard"
+        "eslint:recommended"
     ],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "rules": {
-        "indent": ["error", 4]
+        "semi": ["warn", "always"],
+        "semi-spacing": "warn",
+        "keyword-spacing": ["warn", {
+            "before": true,
+            "after": true
+        }],
+        "no-multi-spaces": ["warn", {
+            "ignoreEOLComments": true,
+            "exceptions": {
+                "VariableDeclarator": true
+            }
+        }],
+        "key-spacing": "warn",
+        "space-before-blocks": "warn",
+        "space-before-function-paren": ["warn", "never"],
+        "space-infix-ops": "warn",
+        "brace-style": "warn",
+        "comma-spacing": "warn",
+        "indent": "warn",
+        "arrow-spacing": "warn"
     }
 }
