--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "marked": "^4.0.17",
-    "node-fetch": "^2.6.7"
+    "marked": "^4.0.17"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
