--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "first-name"
   ],
   "author": "Mylloon",
-  "license": "GPL-3.0-only",
+  "license": "AGPL-3.0-or-later",
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
